--- a/web/homes/homeDoctor.xhtml
+++ b/web/homes/homeDoctor.xhtml
@@ -96,10 +96,10 @@
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaMedicamento.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Medicamentos</a></li>
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaPaciente.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Pacientes</a></li>
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaHistorialClinico.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Historial Clinico</a></li>
-                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaExamen.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes</a></li>
-                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaReferenciaClinica.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Referencia Clinica</a></li>
+                                <!--                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaExamen.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes</a></li>-->
+                                <!--                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaReferenciaClinica.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Referencia Clinica</a></li>-->
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaEnfermedad.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedades</a></li>
-                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/BuscarRevisionGeneral.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Revisión General</a></li>
+                                <!--                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/BuscarRevisionGeneral.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Revisión General</a></li>-->
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/BuscarCita.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Citas</a></li>
                             </ul>
                         </li>
@@ -130,7 +130,7 @@
                         <img src="../resources/assets/img/user01.png" alt="user-picture" class="img-responsive img-circle center-box"/>
                     </figure>
                     <li style="color:#fff; cursor:default;">
-                         <span class="all-tittles"> #{controlador.usu.nombre} #{controlador.usu.apellido} </span>
+                        <span class="all-tittles"> #{controlador.usu.nombre} #{controlador.usu.apellido} </span>
                     </li>
                     <li  class="tooltips-general exit-system-button" data-href="../faces/index.xhtml" data-placement="bottom" title="Salir del sistema">
                         <i class="zmdi zmdi-power"></i>
@@ -192,22 +192,22 @@
                 </article>
 
 
-<!--
-                <article class="tile">
-                    <a href="../Doctor/VistaExamen.xhtml">
-                        <div class="tile-icon full-reset"><i class="zmdi"><img class="title-icon" src="../resources/imgs/Doctor/microscope.png" width="60" height="60"></img></i></div>
-                        <div class="tile-num full-reset">Buscar Examen</div>
-                    </a>
-                </article>-->
+                <!--
+                                <article class="tile">
+                                    <a href="../Doctor/VistaExamen.xhtml">
+                                        <div class="tile-icon full-reset"><i class="zmdi"><img class="title-icon" src="../resources/imgs/Doctor/microscope.png" width="60" height="60"></img></i></div>
+                                        <div class="tile-num full-reset">Buscar Examen</div>
+                                    </a>
+                                </article>-->
 
 
 
-<!--                <article class="tile">
-                    <a href="../Doctor/VistaReferenciaClinica.xhtml">
-                        <div class="tile-icon full-reset"><i class="zmdi"><img class="title-icon" src="../resources/imgs/Doctor/hospital.png" width="50" height="50"></img></i></div>
-                        <div class="tile-num full-reset">Referencias</div>
-                    </a>
-                </article>  -->
+                <!--                <article class="tile">
+                                    <a href="../Doctor/VistaReferenciaClinica.xhtml">
+                                        <div class="tile-icon full-reset"><i class="zmdi"><img class="title-icon" src="../resources/imgs/Doctor/hospital.png" width="50" height="50"></img></i></div>
+                                        <div class="tile-num full-reset">Referencias</div>
+                                    </a>
+                                </article>  -->
 
                 <article class="tile">
                     <a href="../Doctor/VistaEnfermedad.xhtml">
@@ -216,12 +216,12 @@
                     </a>
                 </article>
 
-<!--                <article class="tile">
-                    <a href="../Doctor/BuscarRevisionGeneral.xhtml">
-                        <div class="tile-icon full-reset"><i class="zmdi"><img class="title-icon" src="../resources/imgs/Doctor/xray.png" width="60" height="60"></img></i></div>
-                        <div class="tile-num full-reset">Revisión</div>
-                    </a>
-                </article>-->
+                <!--                <article class="tile">
+                                    <a href="../Doctor/BuscarRevisionGeneral.xhtml">
+                                        <div class="tile-icon full-reset"><i class="zmdi"><img class="title-icon" src="../resources/imgs/Doctor/xray.png" width="60" height="60"></img></i></div>
+                                        <div class="tile-num full-reset">Revisión</div>
+                                    </a>
+                                </article>-->
 
 
                 <article class="tile">
