--- a/web/Doctor/VistaMedicamento.xhtml
+++ b/web/Doctor/VistaMedicamento.xhtml
@@ -58,7 +58,7 @@
 
                         <li><a href="../homes/homeDoctor.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
 
-                       <li>
+                        <li>
                             <div class="dropdown-menu-button" style="font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-lamp zmdi-hc-fw"></i>&nbsp;&nbsp; Registros <i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
                             <ul class="list-unstyled">
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/IngresoEnfermedad.xhtml"><i class="zmdi zmdi-archive zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Examen</a></li>
@@ -72,10 +72,10 @@
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaMedicamento.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Medicamentos</a></li>
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaPaciente.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Pacientes</a></li>
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaHistorialClinico.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Historial Clinico</a></li>
-                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaExamen.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes</a></li>
-                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaReferenciaClinica.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Referencia Clinica</a></li>
+                                <!--                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaExamen.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes</a></li>-->
+                                <!--                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaReferenciaClinica.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Referencia Clinica</a></li>-->
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaEnfermedad.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedades</a></li>
-                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/BuscarRevisionGeneral.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Revisión General</a></li>
+                                <!--                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/BuscarRevisionGeneral.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Revisión General</a></li>-->
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/BuscarCita.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Citas</a></li>
                             </ul>
                         </li>
@@ -114,22 +114,16 @@
             </nav>
             <div class="container">
                 <div class="page-header">
-                    <h1 class="all-tittles">Sistema Clinicamedica <small> "Busqueda de Medicamentos"</small></h1>
+                    <h1  class="all-tittles">Sistema Clinicamedica <small> "Busqueda de Medicamentos"</small></h1>
                 </div>
             </div>
-            <div class="container-fluid">
-                <ul class="nav nav-tabs nav-justified"  style="font-size: 17px;">
-                    <li role="presentation" class="active"><a href="">Medicamentos</a></li>
 
-
-                </ul>
-            </div>
             <div class="container-fluid"  style="margin: 50px 0;">
                 <div class="row">
                     <div class="col-xs-12 col-sm-4 col-md-3">
                         <img src="../resources/imgs/Doctor/magnifying-glass.png" class="img-responsive center-box" style="max-width: 110px;"/>
                     </div>
-                    <div class="col-xs-12 col-sm-8 col-md-8 text-justify lead">
+                    <div style="font: bold small-caps 120%/200% serif;" class="col-xs-12 col-sm-8 col-md-8 text-justify lead">
                         Bienvenido a la sección Busqueda de Medicamento del sistema, debes de llenar todos los campos del siguiente formulario para poder buscar un medicamento
                     </div>
                 </div>
@@ -138,7 +132,7 @@
 
             <h2 class="text-center all-tittles">Código de Medicamento</h2>
 
-            <div class="container-fluid">
+            <div style="font: bold small-caps 120%/200% serif;" class="container-fluid">
                 <div class="container-flat-form">
                     <form autocomplete="off">
                         <div class="row">
@@ -165,7 +159,7 @@
                     </form>
                 </div>
             </div>
-            <div class="container-fluid">
+            <div style="font: bold small-caps 120%/200% serif;" class="container-fluid">
                 <div class="container-flat-form">
                     <div class="title-flat-form title-flat-blue">Datos de Medicamento</div>
                     <form autocomplete="off">
@@ -201,8 +195,8 @@
                                             <div class="group-material">
                                                 <b:inputText   value="#{medicamentoBean.med.provedor}" readonly="true"/>
                                             </div>
-                                            
-                                            
+
+
 
                                         </h:form>
 
