--- a/web/Doctor/VistaPaciente.xhtml
+++ b/web/Doctor/VistaPaciente.xhtml
@@ -72,10 +72,10 @@
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaMedicamento.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Medicamentos</a></li>
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaPaciente.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Pacientes</a></li>
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaHistorialClinico.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Historial Clinico</a></li>
-                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaExamen.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes</a></li>
-                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaReferenciaClinica.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Referencia Clinica</a></li>
+                                <!--                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaExamen.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes</a></li>-->
+                                <!--                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaReferenciaClinica.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Referencia Clinica</a></li>-->
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/VistaEnfermedad.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedades</a></li>
-                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/BuscarRevisionGeneral.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Revisión General</a></li>
+                                <!--                                <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/BuscarRevisionGeneral.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Revisión General</a></li>-->
                                 <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Doctor/BuscarCita.xhtml"><i class="zmdi zmdi-hc-fw"></i>&nbsp;&nbsp; Citas</a></li>
                             </ul>
                         </li>
@@ -116,34 +116,29 @@
                     <h1 class="all-tittles">Sistema Clinicamedica <small> "Busqueda de Pacientes"</small></h1>
                 </div>
             </div>
-            <div class="container-fluid">
-                <ul class="nav nav-tabs nav-justified"  style="font-size: 17px;">
-                    <li role="presentation" class="active"><a href="">Pacientes</a></li>
 
-
-                </ul>
-            </div>
-            <div class="container-fluid"  style="margin: 50px 0;">
+            <div  class="container-fluid"  style="margin: 50px 0;">
                 <div class="row">
                     <div class="col-xs-12 col-sm-4 col-md-3">
                         <img src="../resources/imgs/Doctor/worker.png" alt="user" class="img-responsive center-box" style="max-width: 110px;"/>
                     </div>
-                    <div class="col-xs-12 col-sm-8 col-md-8 text-justify lead">
+                    <div style="font: bold small-caps 120%/200% serif;" class="col-xs-12 col-sm-8 col-md-8 text-justify lead">
                         Bienvenido a la sección Busqueda de Pacientes del sistema, debes de llenar todos los campos del siguiente formulario para poder buscar un Paciente
                     </div>
                 </div>
             </div>
 
 
-            <h2 class="text-center all-tittles">Código de Paciente</h2>
+            <h2 style="font: bold small-caps 120%/200% serif;" class="text-center all-tittles">Código de Paciente</h2>
+            <br/>
 
-            <div class="container-fluid">
+            <div style="font: bold small-caps 120%/200% serif;" class="container-fluid">
                 <div class="container-flat-form">
                     <form autocomplete="off">
                         <div class="row">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-
+                                    <br/>
                                     <h:form>
                                         <div class="col-lg-2">                   
 
@@ -163,7 +158,7 @@
                     </form>
                 </div>
             </div>
-            <div class="container-fluid">
+            <div style="font: bold small-caps 120%/200% serif;" class="container-fluid">
                 <div class="container-flat-form">
                     <div class="title-flat-form title-flat-blue">Datos de Paciente</div>
                     <form autocomplete="off">
