--- a/web/Enfermera/Examen.xhtml
+++ b/web/Enfermera/Examen.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:b="http://bootsfaces.net/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
 
         <title>Examen</title>
@@ -47,10 +48,19 @@
                     sistema clinica medica
                 </div>
                 <div class="full-reset" style="background-color:#2B3D51; padding: 10px 0; color:#fff;">
-                    <figure>
-                        <img src="../resources/imgs/Enfermera/en.png" alt="Enfermera" class="img-responsive center-box img-circle" style="width:55%;"/>
-                    </figure>
-                    <p class="text-center" style="font: bold small-caps 120%/200% serif;padding-top: 15px">Enfermera #{controlador.usu.nombre} #{controlador.usu.apellido}</p>
+                    <c:if test="#{controlador.Validador() == 1}">
+                        <figure>
+                            <img src="../resources/imgs/Admin/boss.png" class="img-responsive center-box" style="width:55%;"/>
+                            <p class="text-center" style="padding-top: 15px; font: bold small-caps 120%/200% serif;">Administrador #{controlador.usu.nombre} #{controlador.usu.apellido}</p>
+                        </figure>
+                    </c:if>
+
+                    <c:if test="#{controlador.Validador() == 3}">
+                        <figure>
+                            <img src="../resources/imgs/Enfermera/en.png" alt="ClincaMedica" class="img-responsive center-box img-circle" style="width:55%;"/>
+                            <p class="text-center" style="padding-top: 15px; font: bold small-caps 120%/200% serif;">Enfermera #{controlador.usu.nombre} #{controlador.usu.apellido}</p>
+                        </figure>
+                    </c:if>
                 </div>
                 <div class="full-reset nav-lateral-list-menu">
                     <ul class="list-unstyled">
@@ -59,15 +69,25 @@
                         <li><a style="font: bold small-caps 120%/200% serif" href="../faces/homes/homeEnfermera.xhtml"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
 
                         <li>
-                            <div class="dropdown-menu-button"><i class="zmdi zmdi-account-add zmdi-hc-fw"></i>&nbsp;&nbsp; Permisos <i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
+                            <div style="font: bold small-caps 120%/200% serif;" class="dropdown-menu-button"><i class="zmdi zmdi-accounts zmdi-hc-fw"></i>&nbsp;&nbsp;Registros<i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
                             <ul class="list-unstyled">
-                                <li><a href="../faces/enfermera/HistorialClinico.xhtml"><i class="zmdi zmdi-face zmdi-hc-fw "></i>&nbsp;&nbsp; Hisotriales Clinicos</a></li>
-                                <li><a href="../faces/enfermera/ReferenciaClinica.xhtml"><i class="zmdi zmdi-male-alt zmdi-hc-fw"></i>&nbsp;&nbsp; Referencia Clinica</a></li>
-                                <li><a href="../faces/enfermera/Enfermedad.xhtml"><i class="zmdi zmdi-accounts zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedad</a></li>
-                                <li><a href="../faces/enfermera/RevisionGeneral.xhtml"><i class="zmdi zmdi-male-female zmdi-hc-fw active"></i>&nbsp;&nbsp;Revision General </a></li>
-                                <li><a href="../faces/enfermera/Cita.xhtml"><i class="zmdi zmdi-male-female zmdi-hc-fw"></i>&nbsp;&nbsp; Citas</a></li>
-                                <li><a href=""><i class="zmdi zmdi-male-female zmdi-hc-fw"></i>&nbsp;&nbsp; Recetas</a></li>
-                                <li><a href="../faces/enfermera/Examen.xhtml"><i class="zmdi zmdi-male-female zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/Enfermedad.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Enfermedad</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/Examen.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Examen</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/ReferenciaClinica.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Referencia Clinica</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/RevisionGeneral.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Revision General</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/HistorialClinico.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Historial Clinico</a></li>
+
+                            </ul>
+                        </li>
+
+                        <li>
+                            <div style="font: bold small-caps 120%/200% serif;" class="dropdown-menu-button"><i class="zmdi zmdi-search "></i>&nbsp;&nbsp; busquedas <i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
+                            <ul class="list-unstyled">
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/ModificarEnfermedad.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedad</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/ModificarExamen.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Examen</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/ModificarReferenciaClinica.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Referencia Clinica</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/ModificarRevisionGeneral.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Revision General</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/ModificarHistorialClinico.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Historial Clinico</a></li>         
                             </ul>
                         </li>
 
@@ -105,7 +125,7 @@
             </div>
             <div class="container-fluid">
                 <ul class="nav nav-tabs nav-justified"  style="font-size: 17px;">
-                    <li role="presentation" class="active"><a href="faces/Examen.xhtml">Examen</a></li>
+                    <li role="presentation" class="active"><a href="faces/../Examen.xhtml">Examen</a></li>
                     <li role="presentation"><a href="faces/../ModificarExamen.xhtml">Modificar</a></li>
 
 
@@ -142,9 +162,9 @@
                             <div class="col-xs-12 col-sm-8 col-sm-offset-2">
 
                                 <h:form>
-                                    <div class="group-material">
-                                        <b:inputText style="font: bold small-caps 120%/200% serif" id="idExamen" placeholder="Id Examen" value="#{examenBean.ingreso.idExamen}" />
-                                    </div>
+                                    <!--                                    <div class="group-material">
+                                                                            <b:inputText style="font: bold small-caps 120%/200% serif" id="idExamen" placeholder="Id Examen" value="#{examenBean.ingreso.idExamen}" />
+                                                                        </div>-->
                                     <div class="group-material">
                                         <b:inputText style="font: bold small-caps 120%/200% serif" id="nombre" placeholder="Nombre" value="#{examenBean.ingreso.nombre}"  />
                                     </div>
