--- a/web/Enfermera/HistorialClinico.xhtml
+++ b/web/Enfermera/HistorialClinico.xhtml
@@ -3,32 +3,43 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:b="http://bootsfaces.net/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
 
         <title>Enfermedad</title>
-        <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="Shortcut Icon" type="image/x-icon" href="assets/icons/book.ico" />
-
+        <!-- iconos de la pagina -->        
+        <link rel="Shortcut Icon" type="image/x-icon" href="../resources/assets/icons/book.ico" />
+        <!-- sweet alert de la pagina -->
         <script src="../resources/js/sweet-alert.min.js"></script>
-
+        <!-- css sweet alert-->
         <link rel="stylesheet" href="../resources/css/sweet-alert.css"/>
+        <!-- css Material desing -->
         <link rel="stylesheet" href="../resources/css/material-design-iconic-font.min.css"/>
+        <!-- css normalize -->
         <link rel="stylesheet" href="../resources/css/normalize.css"/>
+        <!-- css bootstrap -->
         <link rel="stylesheet" href="../resources/css/bootstrap.min.css"/>
-
+        <!-- css para el scrow de la pagina -->
         <link rel="stylesheet" href="../resources/css/jquery.mCustomScrollbar.css"/>
+        <!-- css estilo de la pagina -->
         <link rel="stylesheet" href="../resources/css/style.css"/>
+
+        <script src="../resources/js/jquery-1.11.2.min.js" type="text/javascript"></script>
+        <!-- js modernizer -->
         <script src="../resources/js/modernizr.js"></script>
+        <!-- js de bootstrap -->
         <script src="../resources/js/bootstrap.min.js"></script>
+        <!-- js del scroll de la pagina -->
         <script src="../resources/js/jquery.mCustomScrollbar.concat.min.js"></script>
+        <!-- js del main-->
         <script src="../resources/js/main.js"></script>
 
     </h:head>
     <h:body>
         <f:event type="preRenderView" listener="#{controlador.verificarSesion()}"/>
-        
+
         <f:event type="preRenderView" listener="#{pacienteBean.listarPaciente()}"/>
         <f:event type="preRenderView" listener="#{referenciaClinicaBean.listarReferenciaClinica()}"/>
         <f:event type="preRenderView" listener="#{enfermedadBean.listarEnfermedad()}"/>
@@ -45,10 +56,19 @@
                     sistema clinica medica
                 </div>
                 <div class="full-reset" style="background-color:#2B3D51; padding: 10px 0; color:#fff;">
-                    <figure>
-                        <img src="../resources/imgs/Enfermera/en.png" alt="Enfermera" class="img-responsive center-box img-circle" style="width:55%;"/>
-                    </figure>
-                    <p class="text-center" style="font: bold small-caps 120%/200% serif;padding-top: 15px">Enfermera #{controlador.usu.nombre} #{controlador.usu.apellido}</p>
+                    <c:if test="#{controlador.Validador() == 1}">
+                        <figure>
+                            <img src="../resources/imgs/Admin/boss.png" class="img-responsive center-box" style="width:55%;"/>
+                            <p class="text-center" style="padding-top: 15px; font: bold small-caps 120%/200% serif;">Administrador #{controlador.usu.nombre} #{controlador.usu.apellido}</p>
+                        </figure>
+                    </c:if>
+
+                    <c:if test="#{controlador.Validador() == 3}">
+                        <figure>
+                            <img src="../resources/imgs/Enfermera/en.png" alt="ClincaMedica" class="img-responsive center-box img-circle" style="width:55%;"/>
+                            <p class="text-center" style="padding-top: 15px; font: bold small-caps 120%/200% serif;">Enfermera #{controlador.usu.nombre} #{controlador.usu.apellido}</p>
+                        </figure>
+                    </c:if>
                 </div>
                 <div class="full-reset nav-lateral-list-menu">
                     <ul class="list-unstyled">
@@ -57,15 +77,25 @@
                         <li><a style="font: bold small-caps 120%/200% serif;" href="../faces/homes/homeEnfermera.xhtml"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
 
                         <li>
-                            <div class="dropdown-menu-button"><i class="zmdi zmdi-account-add zmdi-hc-fw"></i>&nbsp;&nbsp; Permisos <i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
+                            <div style="font: bold small-caps 120%/200% serif;" class="dropdown-menu-button"><i class="zmdi zmdi-accounts zmdi-hc-fw"></i>&nbsp;&nbsp;Registros<i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
                             <ul class="list-unstyled">
-                                <li><a href="../faces/enfermera/HistorialClinico.xhtml"><i class="zmdi zmdi-face zmdi-hc-fw active"></i>&nbsp;&nbsp; Hisotriales Clinicos</a></li>
-                                <li><a href="../faces/enfermera/ReferenciaClinica.xhtml"><i class="zmdi zmdi-male-alt zmdi-hc-fw"></i>&nbsp;&nbsp; Referencia Clinica</a></li>
-                                <li><a href="../faces/enfermera/Enfermedad.xhtml"><i class="zmdi zmdi-accounts zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedad</a></li>
-                                <li><a href="../faces/enfermera/RevisionGeneral.xhtml"><i class="zmdi zmdi-male-female zmdi-hc-fw"></i>&nbsp;&nbsp;Revision General </a></li>
-                                <li><a href="../faces/enfermera/Cita.xhtml"><i class="zmdi zmdi-male-female zmdi-hc-fw"></i>&nbsp;&nbsp; Citas</a></li>
-                                <li><a href=""><i class="zmdi zmdi-male-female zmdi-hc-fw"></i>&nbsp;&nbsp; Recetas</a></li>
-                                <li><a href="../faces/enfermera/Examen.xhtml"><i class="zmdi zmdi-male-female zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/Enfermedad.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Enfermedad</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/Examen.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Examen</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/ReferenciaClinica.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Referencia Clinica</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/RevisionGeneral.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Revision General</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/HistorialClinico.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Historial Clinico</a></li>
+
+                            </ul>
+                        </li>
+
+                        <li>
+                            <div style="font: bold small-caps 120%/200% serif;" class="dropdown-menu-button"><i class="zmdi zmdi-search "></i>&nbsp;&nbsp; busquedas <i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
+                            <ul class="list-unstyled">
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/ModificarEnfermedad.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedad</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/ModificarExamen.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Examen</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/ModificarReferenciaClinica.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Referencia Clinica</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/ModificarRevisionGeneral.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Revision General</a></li>
+                                <li><a style="font: bold small-caps 120%/200% serif;" href="faces/../../Enfermera/ModificarHistorialClinico.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Historial Clinico</a></li>         
                             </ul>
                         </li>
 
@@ -103,7 +133,7 @@
             </div>
             <div class="container-fluid">
                 <ul class="nav nav-tabs nav-justified"  style="font-size: 17px;">
-                    <li role="presentation" class="active"><a href="faces/HistorialClinico.xhtml">Historial Clinico</a></li>
+                    <li role="presentation" class="active"><a href="faces/../HistorialClinico.xhtml">Historial Clinico</a></li>
                     <li role="presentation"><a href="faces/../ModificarHistorialClinico.xhtml">Modificar</a></li>
 
 
@@ -145,24 +175,24 @@
                                     </div>
                                     <div class="group-material">
                                         <span>Id Paciente</span>
-                                        <b:selectOneMenu class="tooltips-general material-control" style="font: bold small-caps 120%/200% serif;height:  40px" title="Seleccione Ocupacion" value="#{historialClinicoBean.historial.idPaciente}" >
+                                        <b:selectOneMenu class="tooltips-general material-control" style="font: bold small-caps 120%/200% serif;height: 60px" title="Seleccione Ocupacion" value="#{historialClinicoBean.historial.idPaciente}" >
                                             <f:selectItems value="#{pacienteBean.lstPaciente}" var="paciente" itemLabel="#{paciente.idPaciente}" itemValue="#{paciente.idPaciente}"/>
                                         </b:selectOneMenu>
                                     </div>
                                     <div class="group-material">
                                         <span>Id Referencia Clinica</span>
-                                        <b:selectOneMenu class="tooltips-general material-control" style="font: bold small-caps 120%/200% serif;height: 40px" title="Seleccione Ocupacion" value="#{historialClinicoBean.historial.idReferenciaClinica}" >
+                                        <b:selectOneMenu class="tooltips-general material-control" style="font: bold small-caps 120%/200% serif;height: 60px" title="Seleccione Ocupacion" value="#{historialClinicoBean.historial.idReferenciaClinica}" >
                                             <f:selectItems value="#{referenciaClinicaBean.lstReferencia}" var="re" itemLabel="#{re.nombre}" itemValue="#{re.idReferenciaClinica}"/>
                                         </b:selectOneMenu>
                                     </div>
                                     <div class="group-material">
                                         <span>Id Enfermedad</span>
-                                        <b:selectOneMenu class="tooltips-general material-control" style="font: bold small-caps 120%/200% serif;height: 40px" title="Seleccione Ocupacion" value="#{historialClinicoBean.historial.idEnfermedad}" >
+                                        <b:selectOneMenu class="tooltips-general material-control" style="font: bold small-caps 120%/200% serif; height:60px" title="Seleccione Ocupacion" value="#{historialClinicoBean.historial.idEnfermedad}" >
                                             <f:selectItems value="#{enfermedadBean.lstEnfermedad}" var="es" itemLabel="#{es.nombre}" itemValue="#{es.idEnfermedad}"/>
                                         </b:selectOneMenu>
                                     </div>
                                     <div class="group-material">
-                                        <b:inputText style="font: bold small-caps 120%/200% serif;height: 40px" id="fecha" placeholder="Fecha" value="#{historialClinicoBean.historial.fecha}"  />
+                                        <b:inputText style="font: bold small-caps 120%/200% serif;" id="fecha" placeholder="Fecha" value="#{historialClinicoBean.historial.fecha}"  />
                                     </div>
                                     <p class="text-center">
                                         <b:commandButton class="btn btn-primary zmdi zmdi-floppy" value="Guardar" action="#{historialClinicoBean.registrar()}"/>
