--- a/web/Doctor/Calendario.xhtml
+++ b/web/Doctor/Calendario.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Calendario</title>
         <meta charset="UTF-8"/>
@@ -39,6 +40,8 @@
 
     <h:body>
 
+        <f:event type="preRenderView" listener="#{controlador.verificarSesion()}"/>
+        
         <div class="navbar-lateral full-reset">
             <div class="visible-xs font-movile-menu mobile-menu-button"></div>
             <div class="full-reset container-menu-movile custom-scroll-containers">
