--- a/web/Doctor/VistaMedicamento.xhtml
+++ b/web/Doctor/VistaMedicamento.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:b="http://bootsfaces.net/ui"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
 
         <title>Historiales Clinicos</title>
@@ -28,7 +29,7 @@
     </h:head>
 
     <h:body>
-
+        <f:event type="preRenderView" listener="#{controlador.verificarSesion()}"/>
         <div class="navbar-lateral full-reset">
             <div class="visible-xs font-movile-menu mobile-menu-button"></div>
             <div class="full-reset container-menu-movile custom-scroll-containers">
